--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
-    <iframe src="https://madchill.github.io/fe-footProd/20210924.pdf"></iframe>
+    <iframe src="https://madchill.github.io/fe-footProd/20210924.pdf" style="position:absolute;right:0; top:0; bottom:0; width:100%;"></iframe>
 </body>
 
 
