--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
     <iframe src="https://madchill.github.io/fe-footProd/20210924.pdf" style="position:absolute;right:0; top:0; bottom:0; width:100%;"></iframe>
+    <a href='https://madchill.github.io/fe-footProd/20210924.pdf'>open new</a>
 </body>
 
 
